--- a/style/style.styl
+++ b/style/style.styl
@@ -5,10 +5,20 @@ body
 header
     width: 100%
     height: 100px
+    padding: 10px
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 
     .wrapper
         max-width: 1300px
         margin auto
+        display: flex
+        align-items: center
+        height: 100%
+        justify-content: space-between
+        padding: 0px 10px
+        z-index 10
+        background-color: white
+        position relative 
 
         &-logo
             width 50px
@@ -17,4 +27,22 @@ header
             img
                 height: 100%
                 width 100%
-                
+        
+        &-hamburger
+            width: 50px
+            height: 30px
+            display: flex
+            flex-direction: column
+            justify-content: space-between
+            cursor: pointer
+            
+            span
+                border: 2px solid black
+    
+    nav
+        position: absolute
+        left: 50%
+        transform: translateX(-50%) translateY(-100px)
+        z-index 1
+
+    &
